# HookRemoteControl

./: .gitignore  CMakeLists.txt  nrf52840dk_nrf52840.overlay  prj.conf
inc/: adt_cbuffer.h  adt_codes.h  commands.h  communications.h  database.h  encoding_checksum.h  lcd_spiModule.h  remote.h  spin3204_control.h  system.h
src/: adt_cbuffer.c  commands.c  commands_tasks.c  communications.c  database.c  encoding_checksum.cpp  lcd_spiModule.c  main.c  remote.c  spin3204_control.c  system.c
